# ComfyUI-fixnodetranslate

./: README.md  __init__.py  model-list.json  pyproject.toml
js/: node_fixer.js
