[project]
name = "fixnodetranslate"
version = "1.0.0"
description = "Addon for ComfyUI that adds 'Fix node (recreate + keep inputs)' context menu option"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/vivi-gomez/ComfyUI-fixnodetranslate"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vivi-gomez"
DisplayName = "ComfyUI-fixnodetranslate"
Icon = ""
